Fix misaligned highlighted text

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -681,3 +681,5 @@ div[class~="language-json"]
     height: 0
 
 
+.algolia-docsearch-suggestion--highlight
+    padding: 0 !important
